# CCRCB

./: CMakeLists.txt  README.md  batch-thea.sh  profile_ncu.sh  profile_nsys.sh  runs.txt
.cache/clangd/index/: main.cpp.F4083E5DAF30C900.idx
ccrcb_analysis/: README.md  __init__.py  parsers.py  plotters.py
latex/: bibliography.bib  main-backup.tex  main.aux  main.bbl  main.blg  main.tex
notebooks/: test-run.ipynb
runs/: generate_hyper.py  generate_massive.py  generate_ultimate.py  generate_uniform.py  repro_crash.txt  runs-extreme.txt  runs-extreme_part1.txt  runs-extreme_part2.txt  runs-hyper.txt  runs-massive.txt  runs-massive_part1.txt  runs-massive_part2.txt  runs-massive_part3.txt  runs-massive_part4.txt  runs-massive_part5.txt  runs-minimal.txt  runs-scaling-2.txt  runs-scaling.txt  runs-test-analysis.txt  runs-test-hang.txt  runs-ultimate.txt  runs-uniform.txt  runs.txt
src/: benchmark_lattice.h  comm_env.cpp  comm_env.h  config_parser.h  gpu_type.cpp  gpu_type.h  main.cpp
